--- a/PrettyHair.Core/PrettyHair.Core.csproj
+++ b/PrettyHair.Core/PrettyHair.Core.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoreFacade.cs" />
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Entities\Item.cs" />
     <Compile Include="Entities\Order.cs" />
