--- a/PrettyHair.DAL/PrettyHair.DAL.csproj
+++ b/PrettyHair.DAL/PrettyHair.DAL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{82214339-D41A-40BC-BF7E-3A9DD7B9CD12}</ProjectGuid>
+    <ProjectGuid>{92DFA538-FEAB-4D2F-9EAB-CDD3785343A9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PrettyHair.Core</RootNamespace>
-    <AssemblyName>PrettyHair.Core</AssemblyName>
+    <RootNamespace>PrettyHair.DAL</RootNamespace>
+    <AssemblyName>PrettyHair.DAL</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,19 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Customer.cs" />
-    <Compile Include="Entities\Item.cs" />
-    <Compile Include="Entities\Order.cs" />
-    <Compile Include="Entities\Orderline.cs" />
-    <Compile Include="Helpers\Validation.cs" />
-    <Compile Include="Interfaces\ICustomer.cs" />
-    <Compile Include="Interfaces\IItem.cs" />
-    <Compile Include="Interfaces\IOrder.cs" />
-    <Compile Include="Interfaces\IOrderline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CustomerRepository.cs" />
+    <Compile Include="Repositories\ItemRepository.cs" />
+    <Compile Include="Repositories\OrderlineRepository.cs" />
+    <Compile Include="Repositories\OrderRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
+    <ProjectReference Include="..\PrettyHair.Core\PrettyHair.Core.csproj">
+      <Project>{82214339-d41a-40bc-bf7e-3a9dd7b9cd12}</Project>
+      <Name>PrettyHair.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
