--- a/PrettyHair.Core/PrettyHair.Core.csproj
+++ b/PrettyHair.Core/PrettyHair.Core.csproj
@@ -58,6 +58,9 @@
     <Compile Include="Interfaces\IOrder.cs" />
     <Compile Include="Interfaces\IOrderline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CustomerRepository.cs" />
+    <Compile Include="Repositories\ItemRepository.cs" />
+    <Compile Include="Repositories\OrderlineRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
