--- a/PrettyHair.Core/PrettyHair.Core.csproj
+++ b/PrettyHair.Core/PrettyHair.Core.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Entities\EntityKeyGeneratorDate.cs" />
     <Compile Include="Entities\EntityKeyGeneratorNext.cs" />
     <Compile Include="Entities\KeyFactory.cs" />
-    <Compile Include="Entities\OrderRepository.cs" />
+    <Compile Include="Repositories\OrderRepository.cs" />
     <Compile Include="Interfaces\IEntityKeyGenerator.cs" />
     <Compile Include="Entities\Item.cs" />
     <Compile Include="Entities\Order.cs" />
