--- a/PrettyHair.DAL/PrettyHair.DAL.csproj
+++ b/PrettyHair.DAL/PrettyHair.DAL.csproj
@@ -41,6 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DALFacade.cs" />
+    <Compile Include="EntityKeyGeneratorDate.cs" />
+    <Compile Include="EntityKeyGeneratorNext.cs" />
+    <Compile Include="EntityKeyGeneratorRandom.cs" />
+    <Compile Include="IEntityKeyGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CustomerStorage.cs" />
     <Compile Include="Repositories\ItemStorage.cs" />
