--- a/PrettyHair.DAL/PrettyHair.DAL.csproj
+++ b/PrettyHair.DAL/PrettyHair.DAL.csproj
@@ -47,9 +47,9 @@
     <Compile Include="IEntityKeyGenerator.cs" />
     <Compile Include="KeyFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CustomerStorage.cs" />
-    <Compile Include="Repositories\ItemStorage.cs" />
-    <Compile Include="Repositories\OrderStorage.cs" />
+    <Compile Include="Storage\CustomerStorage.cs" />
+    <Compile Include="Storage\ItemStorage.cs" />
+    <Compile Include="Storage\OrderStorage.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PrettyHair.Core\PrettyHair.Core.csproj">
