Added Domain layer. Changed all references.

--- a/PrettyHair.DAL/PrettyHair.DAL.csproj
+++ b/PrettyHair.DAL/PrettyHair.DAL.csproj
@@ -44,7 +44,6 @@
     <Compile Include="EntityKeyGeneratorDate.cs" />
     <Compile Include="EntityKeyGeneratorNext.cs" />
     <Compile Include="EntityKeyGeneratorRandom.cs" />
-    <Compile Include="IEntityKeyGenerator.cs" />
     <Compile Include="KeyFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\CustomerStorage.cs" />
@@ -52,9 +51,9 @@
     <Compile Include="Storage\OrderStorage.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PrettyHair.Core\PrettyHair.Core.csproj">
-      <Project>{82214339-d41a-40bc-bf7e-3a9dd7b9cd12}</Project>
-      <Name>PrettyHair.Core</Name>
+    <ProjectReference Include="..\Prettyhair.Domain\PrettyHair.Domain.csproj">
+      <Project>{43ed4761-b6ce-4dc9-b3ea-862eb2ff6f9c}</Project>
+      <Name>PrettyHair.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
